# NPS_C_Translator

./: .gitignore  CMakeLists.txt  NPS_C_Translator.cbp  README.md  hash.cpp  hash.h  heap.cpp  heap.h  list.cpp  list.h  list_adv.h  main.cpp  string_utils.cpp  string_utils.h
LexemeParsing/: ConstantLexemeParser.cpp  KeywordVarNameParser.cpp  Keywords.h  LexemeError.h  LexemeInfo.h  LexemeParseStatesManager.cpp  LexemeParseStatesManager.h  LexemeParser.cpp  LexemeParser.h  LexemeParsingException.h  LexemeParsingInstructions.ini  LexemeParsingPatterns.ini  LexemePatternCases.h  LexemeStatesManager.cpp  LexemeStatesManager.h  LexemeType.h  NumConstants.h  OperationLexemeParser.cpp  OperationToken.h
NPS_Compiler/: main.cpp
NPS_Compiler/ErrorReporter/: ErrorReporter.cpp  ErrorReporter.h
NPS_Compiler/LexemeParsing/: LexemeParseStatesManager.h  LexemeParser.cpp  LexemeParser.h  LexemeParsingInstructions.ini  LexemePatternCases.h
NPS_Compiler/Operations/: CustomOperationsManager.cpp  CustomOperationsManager.h  FunctionDefinition.h  FunctionsManager.cpp  FunctionsManager.h  OperationsManager.cpp  OperationsManager.h  PrimitiveOperationsManager.cpp  PrimitiveOperationsManager.h
NPS_Compiler/SentenceParser/: SentenceParser.cpp  SentenceParser.h
NPS_Compiler/Sentences/: SentenceParser.cpp  SentenceParser.h
NPS_Compiler/SourceCodeParsing/: Helpers.cpp  KeywordHandlers.cpp  SentenceParsing.cpp  SourceCodeParser.cpp  SourceCodeParser.h
NPS_Compiler/TNodes/: GetTNode.cpp  ResultType.h  TNode.cpp  TNode.h  TNodePrint.cpp  TNodeSerializaion.cpp
NPS_Compiler/TypeCast/: TypeCastManager.cpp  TypeCastManager.h
NPS_Compiler/Types/: TypeInfo.cpp  TypeInfo.h  TypesManager.cpp  TypesManager.h
NPS_Compiler/Variables/: VariableTable.cpp  VariableTable.h
NPS_Interpreter/: main.cpp
NPS_Interpreter/Deserialization/: TreeParser.cpp  TreeParser.h
NPS_Interpreter/Functions/: FunctionManager.cpp  FunctionManager.h  ParameterManager.cpp  ParameterManager.h
NPS_Interpreter/Operations/: KeywordManager.cpp  OperationManager.cpp  OperationManager.h  SystemFunctions.cpp
NPS_Interpreter/TNodes/: TFunction.cpp  TKeyWord.cpp  TNode.cpp  TNode.h  TOperation.cpp
NPS_Interpreter/Variables/: VariableTable.cpp  VariableTable.h
NPS_library/: InterpreterTNodeType.h
NPS_library/TNodes/: TNode.cpp  TNode.h
NPS_library/collection_containers/: KeyValuePair.h  PointerList.h  PointerList.tpp  THashTable.h  THashTable.tpp  TSimpleLinkedList.h  TSimpleLinkedList.tpp  hash.cpp  hash.h  list.cpp  list.h  list_adv.h
NPS_library/heap/: heap.cpp  heap.h
NPS_library/utils/: string_utils.cpp  string_utils.h
VariableParsing/: HashEntry.h  HashTable.cpp  HashTable.h  VariableParser.cpp  VariableParser.h
collection_containers/: hash.cpp  hash.h  list.h  list_adv.h
heap/: heap.cpp  heap.h
utils/: string_utils.cpp  string_utils.h
